--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
     -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script type="text/javascript" src="%PUBLIC_URL%/pre.js"></script>
+    <script type="text/javascript" src="%PUBLIC_URL%/ccpwgl_int.min.js"></script>
     <title>React App</title>
   </head>
   <body>
